--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 	</dependencies>
 
 	<build>
+	<finalName>demo</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
